--- a/pom.xml
+++ b/pom.xml
@@ -142,6 +142,7 @@
         <module>bom</module>
         <module>all</module>
         <module>distribution</module>
+        <module>dubbo-demo/untitled</module>
     </modules>
 
     <dependencyManagement>
